[project]
name = "ta-helper"
version = "0.1.0"
description = "Python script to post process Tube Archivist products"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apprise>=1.9.0",
    "flask>=3.1.0",
    "html2text>=2024.2.26",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "setuptools>=75.5.0",
]
